hphp/test/slow/readonly/varray.php.expectf
Fatal error: Cannot change variable mutability of `$mut` after it has been initially defined in %s on line 14
